syntax = "proto3";

option go_package = "./protobuff";

message Time {
  string value = 1;
}

message TimeUpdate {
  Time time = 1;
}

message NowRequest {

}

message TimeStreamRequest {
  int32 length = 1;
}

service TimeService {
  rpc Now(NowRequest) returns (TimeUpdate);
  rpc Stream(TimeStreamRequest) returns (stream TimeUpdate);
}